primera version sin Web Clip

--- a/index.html
+++ b/index.html
@@ -1,5 +1,34 @@
 <!DOCTYPE html>
-<html lang="es">
-  <h1>Hola</h1>
-  <p>Saludo</p>
 <html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Ejemplo de PWA</title>
+    <script src="js/registraServiceWorker.js"></script>
+
+    <!-- Ícono para la página web. Debe ponerse en la raíz de la página. -->
+    <link rel="icon" sizes="32x32" href="favicon.ico">
+
+    <!-- Color de la barra de navegación de Chrome en dispositivos móviles. -->
+    <meta name="theme-color" content="#81d4f4">
+
+    <!-- Configuración de la PWA: Chrome y Edge. -->
+    <link rel="manifest" href="manifest.json">
+
+    <!-- Configuración para Web Clip en Safari. -->
+    <!-- <meta name="apple-mobile-web-app-title" content="dmppwa">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <link rel="apple-touch-icon" href="img/icono2048.png">
+    <link rel="apple-touch-icon" sizes="256x256" href="img/icono256.png">
+    <link rel="apple-touch-icon" sizes="1024x1024" href="img/icono1024.png">
+    <link rel="apple-touch-icon" sizes="2048x2048" href="img/icono2048.png"> -->
+
+    <script type="module" src="cmp/mi-footer.js"></script>
+    <link rel="stylesheet" href="css/estilos.css">
+  <body>
+    <h1>Ejemplo de PWA</h1>
+    <p>Hola</p>
+    <mi-footer></mi-footer>
+  </body>
+</html>
