--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
   <body>
     <h1>Ejemplo de PWA</h1>
     <p>Hola</p>
-    <mi-footer></mi-footer>
+    <footer>
+      <p><mi-footer></mi-footer></p>
+    </footer>
   </body>
 </html>
