--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <link rel="manifest" href="manifest.json">
 
     <!-- Configuración para Web Clip en Safari. -->
-    <!-- <meta name="apple-mobile-web-app-title" content="dmppwa">
+    <meta name="apple-mobile-web-app-title" content="dmppwa">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <link rel="apple-touch-icon" href="img/icono2048.png">
     <link rel="apple-touch-icon" sizes="256x256" href="img/icono256.png">
     <link rel="apple-touch-icon" sizes="1024x1024" href="img/icono1024.png">
-    <link rel="apple-touch-icon" sizes="2048x2048" href="img/icono2048.png"> -->
+    <link rel="apple-touch-icon" sizes="2048x2048" href="img/icono2048.png">
 
     <script type="module" src="cmp/mi-footer.js"></script>
     <link rel="stylesheet" href="css/estilos.css">
