--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Configuración de la PWA: Chrome y Edge. -->
     <link rel="manifest" href="manifest.json">
 
-    <!-- Configuración para Web Clip en Safari. -->
+    <!-- Configuración para Web Clip en Safarix. -->
     <meta name="apple-mobile-web-app-title" content="dmppwa">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
