--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
     <h1>Ejemplo de PWA</h1>
     <p>Hola</p>
     <footer>
-      <p><mi-footer></mi-footer></p>
+      <p>
+        <mi-footer></mi-footer>
+      </p>
     </footer>
   </body>
 </html>
