--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
     <script type="module"
       src="cmp/mi-nav.js">
       </script>
+  </head>
   <body>
     <script src="js/agent.js">
     </script>
-    <form action="javascript:
-        divide();">
+    <form name="forma">
       <header>
         <div class="herramientas">
           <h1>Ejemplo de PWA</h1>
@@ -81,88 +81,42 @@
       <div class="contenido">
         <p class="campo">
           <input id="inA"
+            name="a"
             type="number"
             step="0.1">
           <label for="inA">
             a
           </label>
           <small>
-            <output id="msgA">
+            <output name="msgA">
               Requerido, 1 decimal
             </output>
           </small>
         </p>
         <p class="campo">
           <input id="inB"
+            name="b"
             type="number"
             step="0.1">
           <label for="inB">
             b
           </label>
           <small>
-            <output id="msgB">
+            <output name="msgB">
               Requerido, 1 decimal
             </output>
           </small>
         </p>
         <p>
-          <output id="outSalida">
+          <output
+            name="outSalida">
           </output>
         </p>
       </div>
       <mi-nav></mi-nav>
     </form>
-    <script>
-      function divide() {
-        try {
-          inA.classList.
-            remove("error");
-          inB.classList.
-            remove("error");
-          msgA.value = `Requerido,
-             1 decimal`;
-          msgB.value = `Requerido,
-             1 decimal`;
-          const a =
-            parseFloat(inA.value);
-          const b =
-            parseFloat(inB.value);
-          let error = false;
-          if (isNaN(a)) {
-            error = true;
-            inA.classList.
-              add("error");
-            msgA.value = `Debe ser
-              un número de 1
-              decimal.`;
-
-          }
-          if (isNaN(b)) {
-            error = true;
-            inB.classList.
-              add("error");
-            msgB.value = `Debe ser
-              un número de 1
-              decimal.`;
-          } else if (b === 0) {
-            error = true;
-            inB.classList.
-              add("error");
-            msgB.value =
-              "No puede ser 0.";
-          }
-          if (error) {
-            outSalida.value = "";
-          } else {
-            outSalida.value =
-              a / b;
-          }
-        } catch (e) {
-          console.error(e);
-          outSalida.value =
-            e.message;
-        }
-      }
-    </script>
+    <script
+      src="js/CtrlDivide.js">
+      </script>
   </body>
 </html>
